# romHEX14-community

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  NOTICES.md  README.md  README_zh.md  SPRINT_L_PROGRESS.md
.github/workflows/: release.yml
data/: ecus.json  gearboxes.json  models.json  vehicledb.qrc
docs/: .gitignore  Makefile  PROJECT_FORMAT.md  README.md  mkdocs.yml  requirements.txt
docs/src/en/: 01-introduction.md  02-installation.md  03-quick-start.md  04-user-interface.md  05-projects.md  06-a2l-import.md  07-ols-import.md  08-kp-import.md  09-hex-overview.md  10-map-editor.md  11-checksum-manager.md  12-patches-packs.md  13-ai-functions.md  14-view-sync.md  15-settings.md  16-troubleshooting.md  appendix-b-formats.md  index.md
docs/src/zh/: 01-introduction.md  02-installation.md  03-quick-start.md  04-user-interface.md  05-projects.md  06-a2l-import.md  07-ols-import.md  08-kp-import.md  09-hex-overview.md  10-map-editor.md  11-checksum-manager.md  12-patches-packs.md  13-ai-functions.md  14-view-sync.md  15-settings.md  16-troubleshooting.md  appendix-b-formats.md  index.md
docs/tooling/: gen_docs.py  romhex_driver.py  run_screenshots.py  scenarios.py  translate.py
resources/: Info.plist.in  app.rc  icon.icns  resources.qrc  style.qss
src/: a2limportdialog.cpp  a2limportdialog.h  a2lparser.cpp  a2lparser.h  aboutdialog.cpp  aboutdialog.h  aiassistant.cpp  aiassistant.h  aifunctionsdlg.cpp  aifunctionsdlg.h  aiprovider.cpp  aiprovider.h  aitoolexecutor.cpp  aitoolexecutor.h  appconfig.cpp  appconfig.h  brandlogo.cpp  brandlogo.h  commandpalette.cpp  commandpalette.h  communityupdatechecker.cpp  communityupdatechecker.h  configdialog.cpp  configdialog.h  createmapdlg.cpp  createmapdlg.h  dtcdialog.cpp  dtcdialog.h  ecudetector.cpp  ecudetector.h  featuregate.h  featuregate_community.cpp  hexcomparedlg.cpp  hexcomparedlg.h  hexwidget.cpp  hexwidget.h  introwizard.cpp  introwizard.h  kpimportdlg.cpp  kpimportdlg.h  (+56 more)
src/cloud/: CloudClient.h
src/datalog/: CanonicalSignal.cpp  CanonicalSignal.h  ChannelAlias.cpp  ChannelAlias.h  ChannelTreeWidget.cpp  ChannelTreeWidget.h  CompareLogsDialog.cpp  CompareLogsDialog.h  EcuFamily.cpp  EcuFamily.h  LogReader.cpp  LogReader.h  LogTable.cpp  LogTable.h  LogViewerWindow.cpp  LogViewerWindow.h  PullDetector.cpp  PullDetector.h  SidecarLoader.cpp  SidecarLoader.h  TimeSeriesPlotWidget.cpp  TimeSeriesPlotWidget.h  UnitNormalizer.cpp  UnitNormalizer.h
src/debug/: DebugRpc.cpp  DebugRpc.h
src/io/: rx14container.cpp  rx14container.h
src/io/legion/: Legion.cpp  Legion.h  LegionDlg.cpp  LegionDlg.h  LegionHarvestWorker.cpp  LegionHarvestWorker.h  LegionPreviewWidget.cpp  LegionPreviewWidget.h  LegionTypes.h
src/io/ols/: CArchiveReader.cpp  CArchiveReader.h  KpImporter.cpp  KpImporter.h  MapAutoDetect.cpp  MapAutoDetect.h  OlsHeader.cpp  OlsHeader.h  OlsImporter.cpp  OlsImporter.h  OlsKennfeldParser.cpp  OlsKennfeldParser.h  OlsMagicScanner.cpp  OlsMagicScanner.h  OlsProjectMetadata.cpp  OlsProjectMetadata.h  OlsRomExtractor.cpp  OlsRomExtractor.h  OlsVersionDirectory.cpp  OlsVersionDirectory.h  ZipDecompressor.cpp  ZipDecompressor.h
src/io/winols/: RomChunkFingerprint.cpp  RomChunkFingerprint.h  RomFingerprint.cpp  RomFingerprint.h  SimilarFilesDlg.cpp  SimilarFilesDlg.h  SimilarityIndex.cpp  SimilarityIndex.h  WinOlsCatalogReader.cpp  WolsCatalogStore.cpp  WolsCatalogStore.h  WolsTwinFinder.cpp  WolsTwinFinder.h
src/lua/: LuaApi_Global.cpp  LuaApi_Http.cpp  LuaApi_Project.cpp  LuaApi_Stubs.cpp  LuaConstants.cpp  LuaEngine.cpp  LuaEngine.h  LuaPropertyIds.h
src/savepoints/: SavepointManager.cpp  SavepointManager.h
src/stubs/: accountwidget.h  apiclient.h  checksumelectdlg.h  checksummanager.h  hexcomparedlg.h  logindialog.h  romcomparedlg.h  updatechecker.h
src/stubs/io/ols/: EcuAutoDetect.h  MapAutoDetect.h  OlsExporter.h  OlsProjectBuilder.h
src/util/: Blake3.cpp  Blake3.h
tests/: test_mapdetect_corpus.cpp
tests/lua/: run_tests.ps1  test_helper.lua
tests/lua/evc/: legion_probe.lua  test_evc_01_hello.lua  test_evc_02_version.lua  test_evc_03_simple_server.lua  test_evc_04_file_processor.lua  test_evc_05_advanced_server.lua  test_evc_06_import_server.lua  test_evc_07_two_step_tuning.lua  test_evc_08_create_map.lua  test_portal_flow_audi.lua
tests/lua/fixtures/: .gitignore  README.md
tests/lua/integration/: test_legion_apply_real.lua  test_legion_real.lua  test_portal_real.lua  test_winols_01_hello.lua  test_winols_02_version.lua  test_winols_08_create_map.lua
tests/lua/unit/: test_chunk_fingerprint.lua  test_global_binaryand.lua  test_global_binaryor.lua  test_global_binaryxor.lua  test_global_chomp.lua  test_global_createdirectory.lua  test_global_declare.lua  test_global_deleteprojectversion.lua  test_global_doesfileexist.lua  test_global_duplicateproject.lua  test_global_findprojects.lua  test_global_findprojects2.lua  test_global_fromhex.lua  test_global_fromjson.lua  test_global_getclient.lua  test_global_getlasterror.lua  test_global_getprojectversions.lua  test_global_getversion.lua  test_global_httpaddfile.lua  test_global_httpaddheader.lua  test_global_httpaddparam.lua  test_global_httpexecute.lua  test_global_httpresponseerror.lua  test_global_httpresponsefile.lua  test_global_httpresponsestring.lua  test_global_httpstart.lua  test_global_log.lua  test_global_messagebox.lua  test_global_messagepump.lua  test_global_newproject.lua  test_global_openandexport.lua  test_global_openprojectversion.lua  test_global_quit.lua  test_global_reactivatechecksums.lua  test_global_readdirectory.lua  test_global_removenonfilenamecharacters.lua  test_global_requirex.lua  test_global_saveall.lua  test_global_setclient.lua  test_global_sleep.lua  (+108 more)
translations/: rx14_en.ts  rx14_es.ts  rx14_th.ts  rx14_zh_CN.ts
